Add examples for swagger
